--- a/templates/pages/code_solutions/code_solution.html
+++ b/templates/pages/code_solutions/code_solution.html
@@ -8,7 +8,7 @@
 
 <main>
 
-    <!-- 1st Content box -->
+    <!-- 1st Content box / My Personal Solution(s) & Video(s) -->
     <div class="row py-0 py-md-2 m-0">
         <div class="col-12 p-0 m-0">
             <div class="p-0 p-md-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
@@ -17,8 +17,9 @@
                     <h3 class="col-12 m-0">{{name}}</h3>
                 </div>
 
+                <!-- YouTube Video(s) -->
                 <!-- Carousel  -->
-                {% if video.has_video %}
+                {% if video.has_video %} 
                     <div class="row py-2 text-center">
                         
                         <!-- Move Carousel left -->
@@ -57,10 +58,12 @@
                         </div>
 
                     </div>
-                {% endif %}
+                {% endif %} 
 
+                <!-- Solutions in language tabs -->
                 <div class="row ppy-2 m-0">
 
+                    <!-- Choose language -->
                     <!-- Folder like tabs -->
                     <nav>
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -72,16 +75,13 @@
                                     <button class="nav-link" id="nav-{{language.name}}-tab" data-bs-toggle="tab" data-bs-target="#nav-{{language.name}}" type="button" role="tab" aria-controls="nav-{{language.name}}" aria-selected="false">{{language.name}}</button>
                                 {% endif %}
                             {% endfor %}
-                            <!-- <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Home</button> -->
-
-                          <!-- <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
-
-                          <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button> -->
-                          
 
                         </div>
-                      </nav>
-                      <div class="tab-content" id="nav-tabContent">
+                    </nav>
+
+                    <!-- My Code Solution -->
+                    <div class="tab-content" id="nav-tabContent">
+                        
                         {% for language in languages %}
                             {% if loop.index-1 == 0 %}
                                 <div class="tab-pane fade show active" id="nav-{{language.name}}" role="tabpanel" aria-labelledby="nav-{{language.name}}-tab" tabindex="0">
@@ -97,26 +97,178 @@
                                 </div>
                             {% endif %}
                         {% endfor %}
-                        <!-- <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
-                            
-                        </div>
-                        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">...</div>
-                        <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">...</div>
-                        <div class="tab-pane fade" id="nav-disabled" role="tabpanel" aria-labelledby="nav-disabled-tab" tabindex="0">...</div> -->
-                      </div>
 
-                    <!-- <div class="col-12 m-0">
-                        <h3>Code</h3>
-                        <h3>Solution to Coding Problem</h3>
-                    </div> -->
-
+                    </div>
                 </div>
-                
-            
-
             </div>
         </div>
     </div>
+
+    <!-- 2nd Content box / Seach Res -->
+    {% if search_res %}
+        <div class="row py-0 py-md-2 m-0">
+            <div class="col-12 p-0 m-0">
+                <div class="p-0 p-md-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+
+                    <div class="row py-2 m-0 text-center">
+                        <h3 class="col-12 m-0">Search Results</h3>
+                    </div>
+
+                    <!-- YouTube Video(s) -->
+                    <!-- Carousel  -->
+                    {% if search_res.video.has_video %} 
+                        <div class="row py-2 text-center">
+
+                            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+
+                                <div class="carousel-inner">
+
+                                    {% for src in search_res.video.src%}
+                                        {% if loop.index-1 == 0 %}
+                                            <div class="carousel-item active" data-bs-interval="10000">
+                                            
+                                                <iframe width="450" height="253" src="{{src}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                            </div>
+                                        {% else %}
+                                            <div class="carousel-item" data-bs-interval="10000">
+
+                                                <iframe width="450" height="253" src="{{src}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+
+                            </div>
+
+                        </div>
+                    {% endif %} 
+
+                    <!-- Solutions in language tabs -->
+                    <div class="row ppy-2 m-0">
+
+                        <!-- Choose language -->
+                        <!-- Folder like tabs -->
+                        <nav>
+                            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+
+                                {% for language in search_res.languages %}
+                                    {% if loop.index-1 == 0 %}
+                                        <button class="nav-link active" id="nav-{{language.name}}-search-res-tab" data-bs-toggle="tab" data-bs-target="#nav-{{language.name}}-search-res" type="button" role="tab" aria-controls="nav-{{language.name}}-search-res" aria-selected="true">
+                                            {{ language.name|replace("-Sharp", "#")|replace("-Plus-Plus", "++") }}
+                                        </button>
+                                    {% else %}
+                                        <button class="nav-link" id="nav-{{language.name}}-search-res-tab" data-bs-toggle="tab" data-bs-target="#nav-{{language.name}}-search-res" type="button" role="tab" aria-controls="nav-{{language.name}}-search-res" aria-selected="false">
+                                            {{language.name|replace("-Sharp", "#")|replace("-Plus-Plus", "++")}}
+                                        </button>
+                                    {% endif %}
+                                {% endfor %}
+
+                            </div>
+                        </nav>
+
+                        
+
+                        <!-- Other Sites Solution(s) UI -->
+                        <div class="tab-content" id="nav-tabContent">
+                            
+                            {% for language in search_res.languages %}
+
+                                {% if loop.index-1 == 0 %}
+
+                                    <div class="tab-pane fade show active" id="nav-{{language.name}}-search-res" role="tabpanel" aria-labelledby="nav-{{language.name}}-search-res-tab" tabindex="0">
+
+                                        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-{{language.name}}-res"> 
+                                            <!-- *SEARCH RES* -->
+                                        </div>
+                                        
+                                        <script>
+
+                                            // inject search results
+                                            const upDateContent = (searchSolutions, language) => {
+                                                                
+                                                let pgNumMinus1 = 0; // get page number 
+                                                let showFromIdx = (pgNumMinus1 * 24); // get starting index for solutions to show
+                                                
+                                                // loop through solutions and show only 24 solutions
+                                                for (let i = showFromIdx; i < showFromIdx + 24; i++) {
+                                    
+                                                    if (searchSolutions[i]) {
+                                    
+                                                        const solution = searchSolutions[i];
+                                                        const card = document.createElement("div"); // create search result element
+                                                        card.classList.add("col"); // add bootstrap class
+                                    
+                                                        // add data, design, etc. to search result element
+                                                        card.innerHTML = `
+                                                            <a class="card h-100 btn btn-outline-dark p-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);" href="${solution.href}">
+                                                                <div class="card-body" style="padding: 15px;">
+                                                                    <h5 class="card-title text-center" style="font-size: 15px; font-weight: bold;">${solution.site_name}</h5>
+                                                                    <p class="card-text text-center" style="font-size: 12px;"><i>Solution</i></p>
+                                                                </div>
+                                                            </a>
+                                                        `;
+                                                        document.getElementById(`search-query-${language}-res`).appendChild(card);
+                                    
+                                                    }
+                                                }
+                                            }
+
+                                            let language = {{language|tojson}};
+                                            const languageObj = {}
+                                            languageObj[language.name] = language.name;
+
+                                            const searchSolutionsObj = {}
+                                            searchSolutionsObj[language.name] = language.solutions;
+
+                                            // const searchSolutions = {{language.solutions|tojson}};
+                                            
+                                            upDateContent(searchSolutionsObj[language.name], language.name)
+                                        </script>
+                                    </div>
+
+                                {% else %}
+
+                                    <div class="tab-pane fade"  id="nav-{{language.name}}-search-res" role="tabpanel" aria-labelledby="nav-{{language.name}}-search-res-tab" tabindex="0">
+                                        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-{{language.name}}-res"> 
+                                            <!-- *SEARCH RES* -->
+                                        </div>
+                                        
+                                        <script>
+
+                                            // inject search results
+                                        
+                                            
+                                            language = {{language|tojson}};
+                                            languageObj[language.name] = language.name;
+                                            searchSolutionsObj[language.name] = language.solutions;
+
+                                            upDateContent(searchSolutionsObj[language.name], language.name)
+                                        </script>
+                                    </div>
+
+                                {% endif %}
+                                    
+                            {% endfor %}
+
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
     <!-- Prism JS code -->
     <script src="../../../static/js/prism.js"></script>
 </main>
