--- a/templates/pages/code_solutions/search_solutions.html
+++ b/templates/pages/code_solutions/search_solutions.html
@@ -23,19 +23,24 @@
 
     <!-- This <script> Allows us to load the next page without doing a new API call "Saves Money 💰" -->
     <script>
-        const searchSolutions = {{solutions|tojson}}; // get solutions from server
-        let pgNum;
+
+        const searchSolutions = {{solutions|tojson}}; // get solutions from server Jinja2
+        let pgNum; // Global variable to store page/pagination number
 
         const upDateContent = () =>{
+
             let pgNumMinus1 = Number(window.location.href.split("/").pop()); // get page number from URL
             let showFromIdx = (pgNumMinus1 * 24); // get starting index for solutions to show
             
             // loop through solutions and show only 24 solutions
             for (let i = showFromIdx; i < showFromIdx + 24; i++) {
+
                 if (searchSolutions[i]) {
+
                     const solution = searchSolutions[i];
                     const card = document.createElement("div"); // create search result element
                     card.classList.add("col"); // add bootstrap class
+
                     // add data, design, etc. to search result element
                     card.innerHTML = `
                         <a class="card h-100 btn btn-outline-dark p-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);" href="/code_solution/${solution._id}">
@@ -46,15 +51,19 @@
                         </a>
                     `;
                     document.getElementById("search-query-res").appendChild(card);
+
                 }
+
             }
         }
         upDateContent(); // run function to show solutions
 
         
-        let pgNav1Var, pgNav2Var, pgNav3Var, pgNav4Var;
+        let pgNav1Var, pgNav2Var, pgNav3Var, pgNav4Var; // Global variables to store pagination numbers
+
         function setPaginationNumbers(){
-            pgNum = Number(window.location.href.split("/").pop())+1;
+            pgNum = Number(window.location.href.split("/").pop())+1; // set page number for pagination
+
             // Determines how many pg nav numbers will show, depending on Current page & number of search res
             if(pgNum > 3){
 
@@ -97,47 +106,49 @@
             }
         }
 
-        function pgNavLeft() {
-            // console.log(pgNum)
-            if (pgNum-1 > 0) {
-                changePage(pgNum - 2);
-            }
+        // when user clicks on left arrow go to previous page
+        const pgNavLeft = () => { 
+            if (pgNum-1 > 0) changePage(pgNum - 2);
         }
 
-        function pgNavTo(pgVar) {
-            // console.log(pgVar)
+         // scroll to top of page
+        const scrollToTop = () => {
+            window.scrollTo(0, 0); 
+
+            // Safari scroll work around 👇👇👇
+            el.style.overflow = 'auto';
+            window.requestAnimationFrame(() => el.scrollTo({ left: 100, behavior: 'smooth' }));
+        }
+
+        // when user clicks on page number go to that page
+        const pgNavTo = (pgVar) =>{ 
+
             if (pgNum !== pgVar) {
+
                 changePage(pgVar-1);
-                window.scrollTo(0, 0);
-                // Safari scroll work around 👇👇👇
-                el.style.overflow = 'auto';
-                // window.scroll(0,0)
-                window.requestAnimationFrame(() => el.scrollTo({ left: 100, behavior: 'smooth' }));
-                // setTimeout(() => (el.style.overflow = 'hidden'), 1000);
-                
+                scrollToTop();
             }
         }
 
-        function pgNavRight() {
-            let totalPages = Math.ceil(searchSolutions.length / 24);
-            if (pgNum < totalPages) {
+        // when user clicks on right arrow go to next page
+        function pgNavRight() { 
+
+            // if there are more pages
+            if (pgNum < Math.ceil(searchSolutions.length/24)) { // Math... >>> gets total number of pages
+
                 changePage(pgNum);
-                window.scrollTo(0, 0);
-                // Safari scroll work around 👇👇👇
-                el.style.overflow = 'auto';
-                window.requestAnimationFrame(() => el.scrollTo({ left: 100, behavior: 'smooth' }));
+                scrollToTop();
             }
         }
 
+        
         function upDatePagination() {
-
             setPaginationNumbers() // update pagination numbers
 
             const pagination = document.createElement("div"); // create search result element
             pagination.classList.add("mx-auto"); // add bootstrap class
-            // add data, design, etc. to search result element
 
-
+            // create staring elements to hold search results
             pagination.innerHTML = `
                 <ul class="m-0 text-center text mt-3 p-0" id="all-pagination-links">
 
@@ -145,98 +156,89 @@
                     <li>
                         <span class="rounded-circle mx-2 pg-nav-active"  onclick="pgNavLeft()">&lt;</span>
                     </li>
-                    
                 </ul>
             `;
-            document.getElementById("search-res-Pagination").appendChild(pagination);
+            document.getElementById("search-res-Pagination").appendChild(pagination); // add staring elements for pagination to page
 
-            const pgNumUnderline = 'text-decoration: underline solid #0280C8 !important; -webkit-text-decoration-line: underline !important;-webkit-text-decoration-color: #0280C8 !important; -webkit-text-decoration-style: solid !important;-webkit-text-decoration-thickness: 2px !important;'
+            // underline style for page number work arounds for Safari & Firefox
+            const pgNumUnderline = 'text-decoration: underline solid #0280C8 !important; -webkit-text-decoration-line: underline !important;-webkit-text-decoration-color: #0280C8 !important; -webkit-text-decoration-style: solid !important;-webkit-text-decoration-thickness: 2px !important;' 
 
-            //  1st page link as a number 
+            // 1st pagination number
+            // adds underline if user is on this page
             let pageLinkStyleNav1 = `border-radius: 5px ${
-                !pgNav2Var ? "5px 5px" : "0px 0px"
+                !pgNav2Var ? "5px 5px" : "0px 0px" // right border if only 1 page
             } 5px${ 
                 pgNav1Var == pgNum ? `; ${pgNumUnderline}` : ';' 
-            }`
+            }` 
             const pageLink = document.createElement("li"); // create 1st page link element
             pageLink.innerHTML = `
                 <span class="pg-nav-active" style="${pageLinkStyleNav1}" onclick="pgNavTo(${pgNav1Var})">${pgNav1Var}</span>
-            ` // Ternary operator adds an underline if user is on this page
+            ` 
             document.getElementById("all-pagination-links").appendChild(pageLink);
             
-            /*
-                <!-- Depending on how many search results we find the navigation at the bottom of the page the chain -->
-                <!-- These shows this page in bottom nav if pgNav2Var, pgNav3Var, pgNav4Var is true -->
-            */
-            let pageLink2 = ''
-            if(pgNav2Var){
-                let pageLinkStyle = pgNav2Var == pgNum ? pgNumUnderline  : ""  // adds underline if user is on this page
-                if(!pgNav3Var) pageLinkStyle += "border-radius: 0px 5px 5px 0px;"
-                pageLink2 = document.createElement("li"); // create 2nd page link element
-                pageLink2.innerHTML = `
-                    <span class="pg-nav-active" style="${pageLinkStyle}" onclick="pgNavTo(${pgNav2Var})">${pgNav2Var}</span>
-                `;
-            }
-            if(pageLink2 !== '') document.getElementById("all-pagination-links").appendChild(pageLink2);
+            
+            const rightBorderRadius = "border-radius: 0px 5px 5px 0px;" // right border radius for last page number in pagination
+            const buildPaginationPgNum = (pgNavVar)=> { // function to build pagination numbers
 
-            let pageLink3 = ''
-            if(pgNav3Var){
-                let pageLinkStyle = pgNav2Var == pgNum ? pgNumUnderline  : ""  // adds underline if user is on 
-                if(!pgNav4Var) pageLinkStyle += "border-radius: 0px 5px 5px 0px;"
-                pageLink3 = document.createElement("li"); // create 2nd page link element
-                pageLink3.innerHTML = `
-                    <span class="pg-nav-active" style="${pageLinkStyle}" onclick="pgNavTo(${pgNav2Var})">${pgNav2Var}</span>
-                `;
-            }
-            if(pageLink3 !== '') document.getElementById("all-pagination-links").appendChild(pageLink3);
+                if (pgNavVar){
+                    let pageLinkStyle = pgNavVar == pgNum ? pgNumUnderline  : ""  // adds underline if user is on this page
+                    if(!pgNavVar+1) pageLinkStyle += rightBorderRadius
 
-            let doteX3 = ''
+                    let pageLink = document.createElement("li"); // create 2nd page link element
+                    pageLink.innerHTML = `
+                        <span class="pg-nav-active" style="${pageLinkStyle}" onclick="pgNavTo(${pgNavVar})">${pgNavVar}</span>
+                    `;
+                    document.getElementById("all-pagination-links").appendChild(pageLink)
+                } 
+            }
+
+            // build 2nd & 3rd pagination numbers
+            buildPaginationPgNum(pgNav2Var)
+            buildPaginationPgNum(pgNav3Var)
+
+           
             if(pgNav3Var && pgNav4Var !== 4){ // if there are more than 4 pages
-                doteX3 = document.createElement("li"); // create 3rd page link element
-                doteX3.innerHTML = `
-                    <span>...</span>
-                `;
+                let doteX3 = document.createElement("li"); // create 3rd page link element
+                doteX3.innerHTML = `<span>...</span>`;
+                document.getElementById("all-pagination-links").appendChild(doteX3);
             }
-            if(doteX3 !== '') document.getElementById("all-pagination-links").appendChild(doteX3);
 
-            let lastPageLink = ''
-            if(pgNav4Var && pgNav4Var !== pgNav2Var && pgNav4Var !== pgNav3Var){ // if there are more than 4 pages
-                lastPageLink = document.createElement("li"); // create last page link element
+            // if there are more than 4 pages
+            if(pgNav4Var && pgNav4Var !== pgNav2Var && pgNav4Var !== pgNav3Var){ 
+                let lastPageLink = document.createElement("li"); // create last page link element
                 lastPageLink.innerHTML = pgNav4Var == pgNum ?
                 `
-                    <span class="pg-nav-active" style="border-radius: 0px 5px 5px 0px; ${pgNumUnderline}" onclick="pgNavTo(${pgNav4Var})">${pgNav4Var}</span>
+                    <span class="pg-nav-active" style="${rightBorderRadius} ${pgNumUnderline}" onclick="pgNavTo(${pgNav4Var})">${pgNav4Var}</span>
                 `: `
-                    <span class="pg-nav-active" style="border-radius: 0px 5px 5px 0px;" onclick="pgNavTo(${pgNav4Var})">${pgNav4Var}</span>
+                    <span class="pg-nav-active" style="${rightBorderRadius}" onclick="pgNavTo(${pgNav4Var})">${pgNav4Var}</span>
                 `
+                document.getElementById("all-pagination-links").appendChild(lastPageLink);
             }
-            if(lastPageLink !== '') document.getElementById("all-pagination-links").appendChild(lastPageLink);
 
-            const rightPageLink = document.createElement("li"); // create 1st page link element
-            rightPageLink.innerHTML = `<span class="rounded-circle mx-2 pg-nav-active" onclick="pgNavRight()">&gt;</span>`;  // adds underline if user is on this page
-            // <!-- Right arrow to next page -->
+            // Right arrow to next page 
+            const rightPageLink = document.createElement("li"); 
+            rightPageLink.innerHTML = `<span class="rounded-circle mx-2 pg-nav-active" onclick="pgNavRight()">&gt;</span>`;
             document.getElementById("all-pagination-links").appendChild(rightPageLink);
         }  
 
-        upDatePagination(); // run function to show pagination
+        upDatePagination(); // set show pagination
+
 
         function changePage(pgNum) {
             window.history.pushState("object or string", "Title", `/search_solutions/None/${pgNum}`); // update URL page number without refreshing page
             document.getElementById("search-query-res").innerHTML = ""; // clear search results
             document.getElementById("search-res-Pagination").innerHTML = ""; // clear search-res-Pagination
             upDateContent(); // update content
-            upDatePagination()
-            // document.getElementById("search-res-main").appendChild(pagination);
+            upDatePagination() // update pagination
         }
 
-        
+        // when user clicks on back or forward button in browser
         window.addEventListener('popstate', function (event) {
             document.getElementById("search-query-res").innerHTML = ""; // clear search results
             document.getElementById("search-res-Pagination").innerHTML = ""; // clear search-res-Pagination
             upDateContent(); // update content
-            upDatePagination()
-            // document.getElementById("search-res-main").appendChild(pagination);
+            upDatePagination() // update pagination
         });
-
 
     </script>        
     <!-- 
